--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@astrojs/vercel": "^8.0.0",
     "astro": "^5.0.2",
     "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
